--- a/public/styles.css
+++ b/public/styles.css
@@ -52,31 +52,6 @@ nav {
     color: #ff6347; /* Change to desired hover color */
 }
 
-.hamburger {
-    display: none;
-    font-size: 24px;
-    cursor: pointer;
-}
-
-#menu-toggle {
-    display: none;
-}
-
-#menu-toggle:checked + .menu {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
-    left: 0;
-    width: 100%;
-    background-color: #333;
-}
-
-#menu-toggle:checked + .menu li {
-    margin: 10px 0;
-    text-align: center;
-}
-
 .container {
     background-color: #fff;
     padding: 20px;
@@ -141,12 +116,12 @@ button:hover {
 
 @media (max-width: 600px) {
     .menu {
-        display: none;
         flex-direction: column;
+        align-items: center;
     }
 
-    .hamburger {
-        display: block;
+    .menu li {
+        margin: 10px 0;
     }
 
     .container {
