--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,6 @@
 <nav>
-    <div class="logo">MyApp</div>
+    <div class="logo"><a href="/">MyApp</a></div>
     <ul class="menu">
-        <li><a href="/">Home</a></li>
         <li><a href="/submissions">Submissions</a></li>
         <% if (user) { %>
             <li><a href="/api/logout">Logout</a></li>
